# continuousheatfermatspirals

./: .gitignore  CMakeLists.txt  Makefile  README.md  Spirals.cpp  example.py  pyproject.toml  setup_and_test.sh  test_cpp_extension.py  test_import.py
.github/workflows/: build_and_test.yaml
cmake/: FindLIBIGL.cmake
heat_fermat_3d/: __init__.py
heat_fermat_3d/src/: SpiralDt.h  Spirals.cpp  Spirals.h  heat_fermat_3d_bindings.cpp
